@@ -107,6 +107,10 @@ if owner is not None:\n
   knowledge_pad.manage_setLocalRoles(userid=owner, roles=[\'Owner\'])\n
   knowledge_pad.manage_delLocalRoles([str(current_user)])\n
   knowledge_pad.reindexObject()\n
+\n
+# set default gadgets\n
+context.ERP5Site_createDefaultKnowledgeBox(knowledge_pad)\n
+\n
 return knowledge_pad.getRelativeUrl()\n
 </string> </value>
         </item>
