@@ -1,4 +1,7 @@
 2008-10-6 yusei
+* Added a script which create default knowledge boxes. By default, this script do nothing.
+
+2008-10-6 yusei
 * Update xml format.
 
 2008-09-08 yusei
